--- a/git/disputils/file/lsd.c.html
+++ b/git/disputils/file/lsd.c.html
@@ -12,10 +12,10 @@
 <body>
 <table><tr><td><a href="../../"><img src="../logo.png" alt="" width="32" height="32" /></a></td><td><h1>disputils</h1><span class="desc">wmutils/xrandr powered multimonitor display utils
 </span></td></tr><tr><td></td><td>
-<a href="../log.html">Log</a> | <a href="../files.html">Files</a> | <a href="../refs.html">Refs</a></td></tr></table>
+<a href="../log.html">Log</a> | <a href="../files.html">Files</a> | <a href="../refs.html">Refs</a> | <a href="../file/README.html">README</a> | <a href="../file/LICENSE.html">LICENSE</a></td></tr></table>
 <hr/>
 <div id="content">
-<p> lsd.c (947B)</p><hr/><table id="blob"><tr><td class="num"><pre>
+<p> lsd.c (1031B)</p><hr/><table id="blob"><tr><td class="num"><pre>
 <a href="#l1" id="l1">1</a>
 <a href="#l2" id="l2">2</a>
 <a href="#l3" id="l3">3</a>
@@ -63,7 +63,15 @@
 <a href="#l45" id="l45">45</a>
 <a href="#l46" id="l46">46</a>
 <a href="#l47" id="l47">47</a>
+<a href="#l48" id="l48">48</a>
+<a href="#l49" id="l49">49</a>
+<a href="#l50" id="l50">50</a>
+<a href="#l51" id="l51">51</a>
 </pre></td><td><pre>
+/* disputils lsd.c 04/15/2016 tudurom &lt;xenogenesis@openmailbox.org&gt;
+ * ix &lt;arcetera@openmailbox.org
+ */
+
 #include &lt;stdio.h&gt;
 #include &lt;stdlib.h&gt;
 #include &lt;err.h&gt;
@@ -71,10 +79,10 @@
 #include &quot;randr.h&quot;
 #include &quot;util.h&quot;
 
-static xcb_connection_t *conn;
-static xcb_screen_t *scrn;
+xcb_connection_t *conn;
+xcb_screen_t *scrn;
 
-static void
+void
 usage(char *name)
 {
     printf(&quot;usage: %s \n&quot;, name);
