--- a/git/disputils/file/man/lsd.1.html
+++ b/git/disputils/file/man/lsd.1.html
@@ -12,7 +12,7 @@
 <body>
 <table><tr><td><a href="../../../"><img src="../../logo.png" alt="" width="32" height="32" /></a></td><td><h1>disputils</h1><span class="desc">wmutils/xrandr powered multimonitor display utils
 </span></td></tr><tr><td></td><td>
-<a href="../../log.html">Log</a> | <a href="../../files.html">Files</a> | <a href="../../refs.html">Refs</a></td></tr></table>
+<a href="../../log.html">Log</a> | <a href="../../files.html">Files</a> | <a href="../../refs.html">Refs</a> | <a href="../../file/README.html">README</a> | <a href="../../file/LICENSE.html">LICENSE</a></td></tr></table>
 <hr/>
 <div id="content">
 <p> lsd.1 (236B)</p><hr/><table id="blob"><tr><td class="num"><pre>
