--- a/git/disputils/files.html
+++ b/git/disputils/files.html
@@ -12,27 +12,30 @@
 <body>
 <table><tr><td><a href="../"><img src="logo.png" alt="" width="32" height="32" /></a></td><td><h1>disputils</h1><span class="desc">wmutils/xrandr powered multimonitor display utils
 </span></td></tr><tr><td></td><td>
-<a href="log.html">Log</a> | <a href="files.html">Files</a> | <a href="refs.html">Refs</a></td></tr></table>
+<a href="log.html">Log</a> | <a href="files.html">Files</a> | <a href="refs.html">Refs</a> | <a href="file/README.html">README</a> | <a href="file/LICENSE.html">LICENSE</a></td></tr></table>
 <hr/>
 <div id="content">
 <table id="files"><thead>
 <tr><td>Mode</td><td>Name</td><td class="num">Size</td></tr>
 </thead><tbody>
+<tr><td>-rw-r--r--</td><td><a href="file/.gitignore.html">.gitignore</a></td><td class="num">4L</td></tr>
+<tr><td>-rw-r--r--</td><td><a href="file/LICENSE.html">LICENSE</a></td><td class="num">13L</td></tr>
 <tr><td>-rw-r--r--</td><td><a href="file/Makefile.html">Makefile</a></td><td class="num">41L</td></tr>
-<tr><td>-rw-r--r--</td><td><a href="file/README.md.html">README.md</a></td><td class="num">14L</td></tr>
+<tr><td>-rw-r--r--</td><td><a href="file/README.html">README</a></td><td class="num">43L</td></tr>
 <tr><td>-rw-r--r--</td><td><a href="file/arg.h.html">arg.h</a></td><td class="num">63L</td></tr>
 <tr><td>-rw-r--r--</td><td><a href="file/config.mk.html">config.mk</a></td><td class="num">8L</td></tr>
-<tr><td>-rw-r--r--</td><td><a href="file/dattr.c.html">dattr.c</a></td><td class="num">88L</td></tr>
-<tr><td>-rw-r--r--</td><td><a href="file/lsd.c.html">lsd.c</a></td><td class="num">47L</td></tr>
+<tr><td>-rw-r--r--</td><td><a href="file/config.mk.openbsd.html">config.mk.openbsd</a></td><td class="num">8L</td></tr>
+<tr><td>-rw-r--r--</td><td><a href="file/dattr.c.html">dattr.c</a></td><td class="num">92L</td></tr>
+<tr><td>-rw-r--r--</td><td><a href="file/lsd.c.html">lsd.c</a></td><td class="num">51L</td></tr>
 <tr><td>-rw-r--r--</td><td><a href="file/man/Makefile.html">man/Makefile</a></td><td class="num">16L</td></tr>
 <tr><td>-rw-r--r--</td><td><a href="file/man/dattr.1.html">man/dattr.1</a></td><td class="num">56L</td></tr>
 <tr><td>-rw-r--r--</td><td><a href="file/man/lsd.1.html">man/lsd.1</a></td><td class="num">16L</td></tr>
 <tr><td>-rw-r--r--</td><td><a href="file/man/pfd.1.html">man/pfd.1</a></td><td class="num">16L</td></tr>
-<tr><td>-rw-r--r--</td><td><a href="file/pfd.c.html">pfd.c</a></td><td class="num">89L</td></tr>
-<tr><td>-rw-r--r--</td><td><a href="file/randr.c.html">randr.c</a></td><td class="num">107L</td></tr>
-<tr><td>-rw-r--r--</td><td><a href="file/randr.h.html">randr.h</a></td><td class="num">38L</td></tr>
-<tr><td>-rw-r--r--</td><td><a href="file/util.c.html">util.c</a></td><td class="num">103L</td></tr>
-<tr><td>-rw-r--r--</td><td><a href="file/util.h.html">util.h</a></td><td class="num">15L</td></tr>
+<tr><td>-rw-r--r--</td><td><a href="file/pfd.c.html">pfd.c</a></td><td class="num">93L</td></tr>
+<tr><td>-rw-r--r--</td><td><a href="file/randr.c.html">randr.c</a></td><td class="num">111L</td></tr>
+<tr><td>-rw-r--r--</td><td><a href="file/randr.h.html">randr.h</a></td><td class="num">34L</td></tr>
+<tr><td>-rw-r--r--</td><td><a href="file/util.c.html">util.c</a></td><td class="num">107L</td></tr>
+<tr><td>-rw-r--r--</td><td><a href="file/util.h.html">util.h</a></td><td class="num">19L</td></tr>
 </tbody></table></div>
 </body>
 </html>
