--- a/git/disputils/log.html
+++ b/git/disputils/log.html
@@ -12,21 +12,30 @@
 <body>
 <table><tr><td><a href="../"><img src="logo.png" alt="" width="32" height="32" /></a></td><td><h1>disputils</h1><span class="desc">wmutils/xrandr powered multimonitor display utils
 </span></td></tr><tr><td></td><td>
-<a href="log.html">Log</a> | <a href="files.html">Files</a> | <a href="refs.html">Refs</a></td></tr></table>
+<a href="log.html">Log</a> | <a href="files.html">Files</a> | <a href="refs.html">Refs</a> | <a href="file/README.html">README</a> | <a href="file/LICENSE.html">LICENSE</a></td></tr></table>
 <hr/>
 <div id="content">
 <table id="log"><thead>
 <tr><td>Date</td><td>Commit message</td><td>Author</td><td class="num">Files</td><td class="num">+</td><td class="num">-</td></tr>
 </thead><tbody>
-<tr><td>2016-04-16 20:06</td><td><a href="commit/acea2a93abde30d2b7beb7aa9dcc600c1cbfb929.html">indent</a></td><td>Tudor</td><td class="num">3</td><td class="num">+110</td><td class="num">-110</td></tr>
-<tr><td>2016-04-16 20:03</td><td><a href="commit/2c4720cc85fda06c8ec5059345b94b9e7811346f.html">Add pfd and clean code</a></td><td>Tudor</td><td class="num">8</td><td class="num">+151</td><td class="num">-5</td></tr>
-<tr><td>2016-04-16 15:38</td><td><a href="commit/58aea1f10d8e38db7fc7f5b3aa260fced5fd4a85.html">add man pages</a></td><td>Tudor</td><td class="num">3</td><td class="num">+88</td><td class="num">-0</td></tr>
-<tr><td>2016-04-16 15:13</td><td><a href="commit/5815b2648ba7226688fdb7468e2cc0088fcf7efc.html">rename lsm to lsd</a></td><td>Tudor</td><td class="num">4</td><td class="num">+51</td><td class="num">-50</td></tr>
-<tr><td>2016-04-16 15:07</td><td><a href="commit/ea25039534747f4a57707d40731fcfda94a57b49.html">add: dattr.c</a></td><td>Tudor</td><td class="num">3</td><td class="num">+63</td><td class="num">-16</td></tr>
-<tr><td>2016-04-13 15:59</td><td><a href="commit/67db9f69e6bb4077e7ef767967e8794d938619f1.html">README</a></td><td>Tudor</td><td class="num">2</td><td class="num">+16</td><td class="num">-5</td></tr>
-<tr><td>2016-04-13 15:50</td><td><a href="commit/b862fb23a3f898a97d9223687cf82ec0355a374b.html">Added dattr draft</a></td><td>Tudor</td><td class="num">3</td><td class="num">+103</td><td class="num">-38</td></tr>
-<tr><td>2016-04-12 19:06</td><td><a href="commit/d7a42d05f8821ffea69ce61d462d34da5326544c.html">Compile with -O2</a></td><td>Tudor</td><td class="num">2</td><td class="num">+1</td><td class="num">-23</td></tr>
-<tr><td>2016-04-12 18:58</td><td><a href="commit/d4d9ee26b657b4987c353f13cb406115bf11aaa8.html">Initial commit</a></td><td>Tudor</td><td class="num">9</td><td class="num">+381</td><td class="num">-0</td></tr>
+<tr><td>2016-04-17 22:40</td><td><a href="commit/0ef9d82c260f6eda7fec61ca3beb79cc3e28bf76.html">clean it up</a></td><td>Tudor</td><td class="num">6</td><td class="num">+11</td><td class="num">-11</td></tr>
+<tr><td>2016-04-17 22:35</td><td><a href="commit/8cc5d210612a5fd3706376e43c5737b067586232.html">fix dattr usage</a></td><td>Tudor</td><td class="num">1</td><td class="num">+1</td><td class="num">-1</td></tr>
+<tr><td>2016-04-17 22:34</td><td><a href="commit/e09ae7c417e0720eb593b78504cf0a3647f9af61.html">remove statics</a></td><td>Tudor</td><td class="num">3</td><td class="num">+9</td><td class="num">-9</td></tr>
+<tr><td>2016-04-17 22:27</td><td><a href="commit/3c7e490963856c659530f12abe9a4088f9fd7fe5.html">Begin cleanup</a></td><td>Tudor</td><td class="num">8</td><td class="num">+42</td><td class="num">-29</td></tr>
+<tr><td>2016-04-17 03:04</td><td><a href="commit/44a57042e9181fb0a3d195025e2903127628b5c5.html">our bro pfd.c is here, lads</a></td><td>Tudor</td><td class="num">2</td><td class="num">+89</td><td class="num">-1</td></tr>
+<tr><td>2016-04-17 02:47</td><td><a href="commit/5d529e2cc8d8a90cb6b88eb710404d3e5559a627.html">rewrite take 2</a></td><td>Tudor</td><td class="num">11</td><td class="num">+243</td><td class="num">-60</td></tr>
+<tr><td>2016-04-15 12:59</td><td><a href="commit/edcf18b25f929bf8be9b6a2a7df7921730f0443a.html">begin to 26c8/knf</a></td><td>ix</td><td class="num">6</td><td class="num">+117</td><td class="num">-99</td></tr>
+<tr><td>2016-04-15 12:45</td><td><a href="commit/6a10d27cf4c21bba82404e7dfe6987d01e899ed1.html">init rewrite commit</a></td><td>ix</td><td class="num">15</td><td class="num">+441</td><td class="num">-131</td></tr>
+<tr><td>2016-03-30 20:43</td><td><a href="commit/bf3b3aa7773ccf4505038a748c183626e626d911.html">docs: rename</a></td><td>ix</td><td class="num">2</td><td class="num">+44</td><td class="num">-44</td></tr>
+<tr><td>2016-03-30 20:42</td><td><a href="commit/73463c1feba933210bf68d4ba3142b4517ae95bc.html">docs: text</a></td><td>ix</td><td class="num">1</td><td class="num">+4</td><td class="num">-4</td></tr>
+<tr><td>2016-02-12 10:59</td><td><a href="commit/6f7caa895ccd5657fbc031818044990f38eb9a3e.html">style: alias update</a></td><td>ix</td><td class="num">3</td><td class="num">+3</td><td class="num">-3</td></tr>
+<tr><td>2016-02-12 10:47</td><td><a href="commit/f242d75c2d6a429ce6c82ea10339f7eb8fb9beeb.html">docs: fix the example</a></td><td>ix</td><td class="num">1</td><td class="num">+3</td><td class="num">-1</td></tr>
+<tr><td>2016-02-12 10:43</td><td><a href="commit/21a7d69390d2edd8d13b12c344e138c1c2d9849a.html">docs: add an example</a></td><td>ix</td><td class="num">1</td><td class="num">+23</td><td class="num">-0</td></tr>
+<tr><td>2016-02-12 08:42</td><td><a href="commit/f8ed2989c17a4a9b7881a498f4eae581411c18df.html">feat: rather than using awk or cut you can now use -xywh</a></td><td>ix</td><td class="num">1</td><td class="num">+20</td><td class="num">-3</td></tr>
+<tr><td>2016-02-12 08:35</td><td><a href="commit/a649363b4967f50102fca5e18f41da12a325c66c.html">docs: markdown</a></td><td>ix</td><td class="num">1</td><td class="num">+3</td><td class="num">-3</td></tr>
+<tr><td>2016-02-11 18:28</td><td><a href="commit/630c277e8bdc1a21d06f82d35182fae31c8755f4.html">style: add license</a></td><td>ix</td><td class="num">1</td><td class="num">+13</td><td class="num">-0</td></tr>
+<tr><td>2016-02-11 18:26</td><td><a href="commit/2b83c033f718b5e0fad4f3a650585586e1b92fc0.html">fix: print current display for current window or $1</a></td><td>ix</td><td class="num">1</td><td class="num">+8</td><td class="num">-2</td></tr>
+<tr><td>2016-02-11 18:20</td><td><a href="commit/a39b58bdb6859b9a3879342a2ccf5b367c2e4c1a.html">initial commit</a></td><td>ix</td><td class="num">4</td><td class="num">+118</td><td class="num">-0</td></tr>
 </tbody></table></div>
 </body>
 </html>
