--- a/git/dotfiles/files.html
+++ b/git/dotfiles/files.html
@@ -43,6 +43,7 @@
 <tr><td>-rwxr-xr-x</td><td><a href="file/disputils/.scripts/lsd.html">disputils/.scripts/lsd</a></td><td class="num">17L</td></tr>
 <tr><td>-rwxr-xr-x</td><td><a href="file/disputils/.scripts/pfd.html">disputils/.scripts/pfd</a></td><td class="num">44L</td></tr>
 <tr><td>-rwxr-xr-x</td><td><a href="file/disputils/.scripts/ppd.html">disputils/.scripts/ppd</a></td><td class="num">9L</td></tr>
+<tr><td>-rw-r--r--</td><td><a href="file/firefox/.mozilla/firefox/g93vzeck.default/chrome/userChrome.css.html">firefox/.mozilla/firefox/g93vzeck.default/chrome/userChrome.css</a></td><td class="num">329L</td></tr>
 <tr><td>-rw-r--r--</td><td><a href="file/git/.gitconfig.html">git/.gitconfig</a></td><td class="num">9L</td></tr>
 <tr><td>-rw-r--r--</td><td><a href="file/gtk/.config/gtk-3.0/bookmarks.html">gtk/.config/gtk-3.0/bookmarks</a></td><td class="num">3L</td></tr>
 <tr><td>-rw-r--r--</td><td><a href="file/gtk/.config/gtk-3.0/gtk.css.html">gtk/.config/gtk-3.0/gtk.css</a></td><td class="num">6L</td></tr>
