--- a/git/dotfiles/log.html
+++ b/git/dotfiles/log.html
@@ -18,6 +18,8 @@
 <table id="log"><thead>
 <tr><td>Date</td><td>Commit message</td><td>Author</td><td class="num">Files</td><td class="num">+</td><td class="num">-</td></tr>
 </thead><tbody>
+<tr><td>2016-04-17 22:42</td><td><a href="commit/e1810f35d42444602b6638ab0d84a6ab841db5aa.html">new things</a></td><td>Tudor</td><td class="num">5</td><td class="num">+352</td><td class="num">-25</td></tr>
+<tr><td>2016-04-17 01:57</td><td><a href="commit/c1c9798617c81be3ef55aab72911d18899d58e6b.html">color scheme: designr by dkeg</a></td><td>Tudor</td><td class="num">7</td><td class="num">+45</td><td class="num">-7</td></tr>
 <tr><td>2016-04-16 21:27</td><td><a href="commit/f9cf6a197c4cef8cfe784f0d0093e867c7eb0d1c.html">tab size</a></td><td>Tudor</td><td class="num">1</td><td class="num">+3</td><td class="num">-2</td></tr>
 <tr><td>2016-04-16 13:29</td><td><a href="commit/742f87628bfaeaf4fe23d19164145fde074a7641.html">multimonitor complete</a></td><td>Tudor</td><td class="num">2</td><td class="num">+3</td><td class="num">-2</td></tr>
 <tr><td>2016-04-15 14:50</td><td><a href="commit/226b2013c63b840ac3e7f07136e4f26f763dd836.html">get rid of gaps</a></td><td>Tudor</td><td class="num">4</td><td class="num">+14</td><td class="num">-10</td></tr>
