--- a/git/disputils/file/randr.h.html
+++ b/git/disputils/file/randr.h.html
@@ -12,10 +12,10 @@
 <body>
 <table><tr><td><a href="../../"><img src="../logo.png" alt="" width="32" height="32" /></a></td><td><h1>disputils</h1><span class="desc">wmutils/xrandr powered multimonitor display utils
 </span></td></tr><tr><td></td><td>
-<a href="../log.html">Log</a> | <a href="../files.html">Files</a> | <a href="../refs.html">Refs</a></td></tr></table>
+<a href="../log.html">Log</a> | <a href="../files.html">Files</a> | <a href="../refs.html">Refs</a> | <a href="../file/README.html">README</a> | <a href="../file/LICENSE.html">LICENSE</a></td></tr></table>
 <hr/>
 <div id="content">
-<p> randr.h (1073B)</p><hr/><table id="blob"><tr><td class="num"><pre>
+<p> randr.h (1195B)</p><hr/><table id="blob"><tr><td class="num"><pre>
 <a href="#l1" id="l1">1</a>
 <a href="#l2" id="l2">2</a>
 <a href="#l3" id="l3">3</a>
@@ -50,11 +50,11 @@
 <a href="#l32" id="l32">32</a>
 <a href="#l33" id="l33">33</a>
 <a href="#l34" id="l34">34</a>
-<a href="#l35" id="l35">35</a>
-<a href="#l36" id="l36">36</a>
-<a href="#l37" id="l37">37</a>
-<a href="#l38" id="l38">38</a>
 </pre></td><td><pre>
+/* disputils randr.h 04/15/2016 tudurom &lt;xenogenesis@openmailbox.org&gt;
+ * ix &lt;arcetera@openmailbox.org&gt;
+ */
+
 #ifndef WMUTILS_RANDR
 #define WMUTILS_RANDR
 
@@ -63,34 +63,26 @@
 #include &lt;stdlib.h&gt;
 #include &lt;err.h&gt;
 
-// Return the list of outputs provided by a provider.
-int
-get_outputs(xcb_connection_t* conn, xcb_randr_provider_t provider, xcb_randr_output_t** os);
+/* Return the list of outputs provided by a provider. */
+int get_outputs(xcb_connection_t* conn, xcb_randr_provider_t provider, xcb_randr_output_t** os);
 
-// Return an array of providers shown by randr.
-int
-get_providers(xcb_connection_t* con, xcb_screen_t* scrn, xcb_randr_provider_t **ps);
+/* Return an array of providers shown by randr. */
+int get_providers(xcb_connection_t* con, xcb_screen_t* scrn, xcb_randr_provider_t **ps);
 
-// Return info about an output
-xcb_randr_get_output_info_reply_t *
-get_output_info(xcb_connection_t* conn, xcb_randr_output_t output);
+/* Return info about an output */
+xcb_randr_get_output_info_reply_t *get_output_info(xcb_connection_t* conn, xcb_randr_output_t output);
 
-// Return an output&apos;s name
-uint8_t*
-get_output_name(xcb_connection_t* conn, xcb_randr_output_t output);
+/* Return an output&apos;s name */
+uint8_t* get_output_name(xcb_connection_t* conn, xcb_randr_output_t output);
 
-int
-get_output_connection(xcb_connection_t* conn, xcb_randr_output_t output);
+int get_output_connection(xcb_connection_t* conn, xcb_randr_output_t output);
 
-// Return an output&apos;s crtc info
-xcb_randr_get_crtc_info_reply_t *
-get_output_crtc_info(xcb_connection_t* conn, xcb_randr_crtc_t crtc);
+/* Return an output&apos;s crtc info */
+xcb_randr_get_crtc_info_reply_t * get_output_crtc_info(xcb_connection_t* conn, xcb_randr_crtc_t crtc);
 
-xcb_window_t
-get_focused_window(xcb_connection_t *conn);
+xcb_window_t get_focused_window(xcb_connection_t *conn);
 
-xcb_get_geometry_reply_t*
-get_window_geometry(xcb_connection_t *conn, xcb_window_t window);
+xcb_get_geometry_reply_t* get_window_geometry(xcb_connection_t *conn, xcb_window_t window);
 
 #endif /* end of include guard: WMUTILS_RANDR */
 </pre></td></tr></table>
