--- a/git/disputils/refs.html
+++ b/git/disputils/refs.html
@@ -12,14 +12,14 @@
 <body>
 <table><tr><td><a href="../"><img src="logo.png" alt="" width="32" height="32" /></a></td><td><h1>disputils</h1><span class="desc">wmutils/xrandr powered multimonitor display utils
 </span></td></tr><tr><td></td><td>
-<a href="log.html">Log</a> | <a href="files.html">Files</a> | <a href="refs.html">Refs</a></td></tr></table>
+<a href="log.html">Log</a> | <a href="files.html">Files</a> | <a href="refs.html">Refs</a> | <a href="file/README.html">README</a> | <a href="file/LICENSE.html">LICENSE</a></td></tr></table>
 <hr/>
 <div id="content">
 <h2>Branches</h2><table id="branches"><thead>
 <tr><td>Name</td><td>Last commit date</td><td>Author</td>
 </tr>
 </thead><tbody>
-<tr><td>master</td><td>2016-04-16 20:06</td><td>Tudor</td></tr>
+<tr><td>master</td><td>2016-04-17 22:40</td><td>Tudor</td></tr>
 </tbody></table><br/></div>
 </body>
 </html>
