--- a/git/dotfiles/file/compton/.compton.conf.html
+++ b/git/dotfiles/file/compton/.compton.conf.html
@@ -15,7 +15,7 @@
 <a href="../../log.html">Log</a> | <a href="../../files.html">Files</a> | <a href="../../refs.html">Refs</a></td></tr></table>
 <hr/>
 <div id="content">
-<p> .compton.conf (2486B)</p><hr/><table id="blob"><tr><td class="num"><pre>
+<p> .compton.conf (2488B)</p><hr/><table id="blob"><tr><td class="num"><pre>
 <a href="#l1" id="l1">1</a>
 <a href="#l2" id="l2">2</a>
 <a href="#l3" id="l3">3</a>
@@ -147,7 +147,7 @@ shadow-exclude = [
 #menu-opacity = 0.8;
 #inactive-opacity = 0.8;
 # active-opacity = 0.8;
-frame-opacity = 0.8;
+# frame-opacity = 0.8;
 #inactive-opacity-override = false;
 #alpha-step = 0.06;
 # inactive-dim = 0.2;
